# matching-engine

./: .gitignore  Cargo.toml  README.md  hft_system_prompt.md
benches/: matching_bench.rs
src/: main.rs
src/orderbook/: additional_tests.rs  circuit_breaker.rs  matching_engine.rs  metrics.rs  mod.rs  order.rs  order_book.rs  side.rs  test_utils.rs  tests.rs  trade.rs
