[package]
name = "hft-my-matching-engine-1"
version = "0.1.0"
edition = "2024"

[lib]
name = "hft_my_matching_engine_1"
path = "src/lib.rs"

[[bin]]
name = "hft-my-matching-engine-1"
path = "src/main.rs"

[dependencies]
# Decimal arithmetic for precise price/quantity handling
rust_decimal = "1.33"
rust_decimal_macros = "1.33"

# UUID generation for unique order/trade IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Metrics
metrics = "0.22"

# Random number generation for testing
rand = "0.8"

[dev-dependencies]
# Benchmarking
criterion = "0.5"

[[bench]]
name = "matching_bench"
harness = false
